ptice change and alignment fix

--- a/css/engagement.css
+++ b/css/engagement.css
@@ -14,21 +14,21 @@
 
 @media (min-width:469px) and (max-width: 668px) {
     #imageModal{
-        top: 328rem !important;
+        top: 363rem !important;
         height: 85% !important;
     }
 }
 
 @media (max-width: 468px) {
     #imageModal{
-        top: 317rem !important;
+        top: 351rem !important;
         height: 63% !important;
     }
 }
 
 @media (max-width: 392px) {
     #imageModal{
-        top: 334rem !important;
+        top: 371rem !important;
         height: 63% !important;
     }
 }
